k8s/services/user/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: user-service
  labels:
    app: user-service
spec:
  type: ClusterIP
  selector:
    app: user-service
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
